# dev_hylladb

./: .gitignore  BestPracitces.md  GOALS.md  HyQL.md  check_paths_library.py  confirm_pydantic.py  main.py  my_shelve.db  pyproject.toml  test_shelve.py
docs/: Conrtibuting.md  HyQL.md  HyllaDB.md  notes.md
hylladb/: __init__.py
hylladb/db/: hylla_db.py  models.py  old_hylla_db.py  path_map.py
hylladb/db/paths_library/: __init__.py  paths_library.py
hylladb/generated_models/: __init__.py  generated_models.py
hylladb/hyql/: HyQl.md  __init__.py  hql_parser.py  hyql.py  hyql_utilities.py  validators.py
hylladb/hyql/constants/: enums.py
hylladb/hyql/hyql_base/: hyql_base_model.py  schema_model.py
hylladb/model_generator/: auto_generate_models.py  generated_models.py
hylladb/utilities/: hylla_utilities.py
tests/: test_hyql.py  test_validators.py
tests/test_utilities/: test_utilities.py
