[tool.poetry]
name = "dev-hylladb"
version = "0.1.0"
description = ""
authors = ["Evan <evanmschultz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.0"
pydantic = "^2.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
grip = "^4.6.2"
glom = "^23.5.0"
pytest = "^8.3.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
